--- a/project/LICENSE.jinja
+++ b/project/LICENSE.jinja
@@ -1,6 +1,6 @@
 BSD License
 
-Copyright (c) {% now 'local', '%Y' %}, {{ full_name }}
+Copyright (c) {{ full_name }}
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
