--- a/project/pyproject.toml.jinja
+++ b/project/pyproject.toml.jinja
@@ -1,11 +1,7 @@
 # https://peps.python.org/pep-0517/
 [build-system]
-{% if version_control == 'setuptools-scm' -%}
-requires = ["setuptools>=45", "wheel", "setuptools-scm>=6.2"]
-{%- else -%}
-requires = ["setuptools>=45", "wheel"]
-{%- endif %}
-build-backend = "setuptools.build_meta"
+requires = ["hatchling", "hatch-vcs"]
+build-backend = "hatchling.build"
 
 # https://peps.python.org/pep-0621/
 [project]
@@ -13,18 +9,20 @@ name = "{{project_name}}"
 description = "{{ project_short_description }}"
 readme = "README.md"
 requires-python = ">=3.8"
-license = {text = "BSD 3-Clause License"}
+license = { text = "BSD 3-Clause License" }
 authors = [
-  {email = "{{email}}"},
-  {name = "{{full_name}}"},
+    { email = "{{email}}", name = "{{full_name}}" },
 ]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "License :: OSI Approved :: BSD License",
+    "Natural Language :: English",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Typing :: Typed",
 ]
 dynamic = ["version"]
 dependencies = []
@@ -32,27 +30,17 @@ dependencies = []
 # extras
 # https://peps.python.org/pep-0621/#dependencies-optional-dependencies
 [project.optional-dependencies]
-test = [
-    "pytest>=6.0",
-    "pytest-cov",
-]
+test = ["pytest>=6.0", "pytest-cov"]
 dev = [
     "black",
-    "cruft",
-    "flake8-bugbear",
-    "flake8-docstrings",
-    "flake8-pyprojecttoml",
-    "flake8-typing-imports",
-    "flake8",
     "ipython",
-    "isort",
     "mypy",
     "pdbpp",
     "pre-commit",
-    "pydocstyle",
     "pytest-cov",
     "pytest",
     "rich",
+    "ruff",
 ]
 
 [project.urls]
@@ -68,59 +56,61 @@ repository = "https://github.com/{{github_username}}/{{project_name}}"
 # [project.entry-points."spam.magical"]
 # tomatoes = "spam:main_tomatoes"
 
-# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
-[tool.setuptools]
-zip-safe = false
-include-package-data = true
-packages = {find = {where = ["src"], exclude=[]}}
+# https://hatch.pypa.io/latest/config/metadata/
+[tool.hatch.version]
+source = "vcs"
 
-[tool.setuptools.package-data]
-"*" = ["py.typed"]
+# https://hatch.pypa.io/latest/config/build/#file-selection
+# [tool.hatch.build.targets.sdist]
+# include = ["/src", "/tests"]
 
-{% if version_control == 'setuptools-scm' %}
-# https://github.com/pypa/setuptools_scm/#pyprojecttoml-usage
-[tool.setuptools_scm]
-{%- endif %}
+# [tool.hatch.build.targets.wheel]
+# only-include = ["src"]
+# sources = ["src"]
 
-# https://pycqa.github.io/isort/docs/configuration/options.html
-[tool.isort]
-profile = "black"
-src_paths = ["src/{{project_slug}}", "tests"]
-
-# https://flake8.pycqa.org/en/latest/user/options.html
-# https://gitlab.com/durko/flake8-pyprojecttoml
-[tool.flake8]
-exclude = "docs,.eggs,examples,_version.py"
-max-line-length = 88
-ignore = "E203"
-min-python-version = "3.8.0"
-docstring-convention = "all" # use numpy convention, while allowing D417
-extend-ignore = """
-E203  # whitespace before ':'
-D107,D203,D212,D213,D402,D413,D415,D416  # numpy
-D100  # missing docstring in public module
-D401  # imperative mood
-W503  # line break before binary operator
-"""
-per-file-ignores = [
-    "tests/*:D",
+# https://github.com/charliermarsh/ruff
+[tool.ruff]
+line-length = 88
+target-version = "py38"
+# https://beta.ruff.rs/docs/rules/
+extend-select = [
+    "E",    # style errors
+    "W",    # style warnings
+    "F",    # flakes
+    "D",    # pydocstyle
+    "I",    # isort
+    "U",    # pyupgrade
+    # "S",    # bandit
+    "C",    # flake8-comprehensions
+    "B",    # flake8-bugbear
+    "A001", # flake8-builtins
+    "RUF",  # ruff-specific rules
+]
+# I do this to get numpy-style docstrings AND retain
+# D417 (Missing argument descriptions in the docstring)
+# otherwise, see:
+# https://beta.ruff.rs/docs/faq/#does-ruff-support-numpy-or-google-style-docstrings
+# https://github.com/charliermarsh/ruff/issues/2606
+extend-ignore = [
+    "D100", # Missing docstring in public module
+    "D107", # Missing docstring in __init__
+    "D203", # 1 blank line required before class docstring
+    "D212", # Multi-line docstring summary should start at the first line
+    "D213", # Multi-line docstring summary should start at the second line
+    "D401", # First line should be in imperative mood
+    "D413", # Missing blank line after last section
+    "D416", # Section name should end with a colon
 ]
 
-
-# http://www.pydocstyle.org/en/stable/usage.html
-[tool.pydocstyle]
-match_dir = "src/{{project_slug}}"
-convention = "numpy"
-add_select = "D402,D415,D417"
-ignore = "D100,D213,D401,D413,D107"
+[tool.ruff.per-file-ignores]
+"tests/*.py" = ["D", "S"]
+"setup.py" = ["D"]
 
 # https://docs.pytest.org/en/6.2.x/customize.html
 [tool.pytest.ini_options]
 minversion = "6.0"
 testpaths = ["tests"]
-filterwarnings = [
-    "error",
-]
+filterwarnings = ["error"]
 
 # https://mypy.readthedocs.io/en/stable/config_file.html
 [tool.mypy]
@@ -131,6 +121,11 @@ disallow_subclassing_any = false
 show_error_codes = true
 pretty = true
 
+# # module specific overrides
+# [[tool.mypy.overrides]]
+# module = ["numpy.*",]
+# ignore_errors = true
+
 
 # https://coverage.readthedocs.io/en/6.4/config.html
 [tool.coverage.report]
@@ -139,27 +134,38 @@ exclude_lines = [
     "if TYPE_CHECKING:",
     "@overload",
     "except ImportError",
+    "\\.\\.\\.",
+    "raise NotImplementedError()",
 ]
-
-# https://github.com/cruft/cruft
-[tool.cruft]
-skip = ["tests"]
+[tool.coverage.run]
+source = ["src"]
 
 # https://github.com/mgedmin/check-manifest#configuration
 [tool.check-manifest]
 ignore = [
-  ".cruft.json",
-  ".flake8",
-  ".github_changelog_generator",
-  ".pre-commit-config.yaml",
-  "tests/**/*",
-  "tox.ini",
+    ".github_changelog_generator",
+    ".pre-commit-config.yaml",
+    ".ruff_cache/**/*",
+    "setup.py",
+    "tests/**/*",
 ]
 
 # https://python-semantic-release.readthedocs.io/en/latest/configuration.html
 [tool.semantic_release]
 version_source = "tag_only"
 branch = "main"
-changelog_sections="feature,fix,breaking,documentation,performance,chore,:boom:,:sparkles:,:children_crossing:,:lipstick:,:iphone:,:egg:,:chart_with_upwards_trend:,:ambulance:,:lock:,:bug:,:zap:,:goal_net:,:alien:,:wheelchair:,:speech_balloon:,:mag:,:apple:,:penguin:,:checkered_flag:,:robot:,:green_apple:,Other"
+changelog_sections = "feature,fix,breaking,documentation,performance,chore,:boom:,:sparkles:,:children_crossing:,:lipstick:,:iphone:,:egg:,:chart_with_upwards_trend:,:ambulance:,:lock:,:bug:,:zap:,:goal_net:,:alien:,:wheelchair:,:speech_balloon:,:mag:,:apple:,:penguin:,:checkered_flag:,:robot:,:green_apple:,Other"
 # commit_parser=semantic_release.history.angular_parser
 build_command = "pip install build && python -m build"
+
+# # for things that require compilation
+# # https://cibuildwheel.readthedocs.io/en/stable/options/
+# [tool.cibuildwheel]
+# # Skip 32-bit builds & PyPy wheels on all platforms
+# skip = ["*-manylinux_i686", "*-musllinux_i686", "*-win32", "pp*"]
+# test-extras = ["test"]
+# test-command = "pytest {project}/tests -v"
+# test-skip = "*-musllinux*"
+
+# [tool.cibuildwheel.environment]
+# HATCH_BUILD_HOOKS_ENABLE = "1"
