--- a/project/{% if project_license == 'BSD-3-Clause' %}LICENSE{% endif %}.jinja
+++ b/project/{% if project_license == 'BSD-3-Clause' %}LICENSE{% endif %}.jinja
@@ -1,7 +1,6 @@
-BSD License
+BSD 3-Clause License
 
-Copyright (c) {{ full_name }}
-All rights reserved.
+Copyright (c) 2023, {{ author_name }}
 
 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions are met:
