--- a/project/pyproject.toml.jinja
+++ b/project/pyproject.toml.jinja
@@ -1,73 +1,80 @@
 # https://peps.python.org/pep-0517/
 [build-system]
-requires = ["hatchling", "hatch-vcs"]
+requires = ["hatchling"{%- if git_versioning -%}, "hatch-vcs"{%- endif %}]
 build-backend = "hatchling.build"
+# read more about configuring hatch at:
+# https://hatch.pypa.io/latest/config/build/
+
+{%- if git_versioning %}
+
+# https://hatch.pypa.io/latest/config/metadata/
+[tool.hatch.version]
+source = "vcs"
+{%- endif %}
 
 # https://peps.python.org/pep-0621/
 [project]
 name = "{{project_name}}"
+{% if git_versioning -%}
+dynamic = ["version"]
+{%- else -%}
+version = "0.1.0"
+{%- endif %}
 description = "{{ project_short_description }}"
 readme = "README.md"
 requires-python = ">=3.8"
-license = { text = "BSD 3-Clause License" }
+license = { text = "{{ project_license }}" }
 authors = [
-    { email = "{{email}}", name = "{{full_name}}" },
+    { name = "{{ author_name }}", email = "{{ author_email }}" },
 ]
 classifiers = [
     "Development Status :: 3 - Alpha",
-    "License :: OSI Approved :: BSD License",
-    "Natural Language :: English",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
-    "Typing :: Typed",
+    # "License :: OSI Approved :: BSD License",
+    # "Typing :: Typed",
 ]
-dynamic = ["version"]
+# add your package dependencies here
 dependencies = []
 
-# extras
 # https://peps.python.org/pep-0621/#dependencies-optional-dependencies
+# "extras" (e.g. for `pip install .[test]`)
 [project.optional-dependencies]
-test = ["pytest>=6.0", "pytest-cov"]
+test = ["pytest", "pytest-cov"]
 dev = [
-    "black",
+    {%- if use_black %}
+    "black",{%- endif %}
     "ipython",
-    "mypy",
-    "pdbpp",
-    "pre-commit",
+    {%- if use_mypy %}
+    "mypy",{%- endif %}
+    "pdbpp",  # https://github.com/pdbpp/pdbpp
+    {%- if use_precommit %}
+    "pre-commit",{%- endif %}
     "pytest-cov",
     "pytest",
-    "rich",
-    "ruff",
+    "rich",  # https://github.com/Textualize/rich
+    {%- if use_ruff %}
+    "ruff",{%- endif %}
 ]
 
 [project.urls]
+{% if github_username -%}
 homepage = "https://github.com/{{github_username}}/{{project_name}}"
 repository = "https://github.com/{{github_username}}/{{project_name}}"
-
-# same as console_scripts entry point
-# [project.scripts]
-# spam-cli = "spam:main_cli"
+{%- endif %}
 
 # Entry points
 # https://peps.python.org/pep-0621/#entry-points
-# [project.entry-points."spam.magical"]
-# tomatoes = "spam:main_tomatoes"
+# same as console_scripts entry point
+# [project.scripts]
+# {{project_name}}-cli = "{{module_name}}:main_cli"
 
-# https://hatch.pypa.io/latest/config/metadata/
-[tool.hatch.version]
-source = "vcs"
-
-# https://hatch.pypa.io/latest/config/build/#file-selection
-# [tool.hatch.build.targets.sdist]
-# include = ["/src", "/tests"]
-
-# [tool.hatch.build.targets.wheel]
-# only-include = ["src"]
-# sources = ["src"]
-
+# [project.entry-points."some.group"]
+# tomatoes = "{{module_name}}:main_tomatoes"
+{% if use_ruff -%}
 # https://github.com/charliermarsh/ruff
 [tool.ruff]
 line-length = 88
@@ -105,12 +112,8 @@ extend-ignore = [
 [tool.ruff.per-file-ignores]
 "tests/*.py" = ["D", "S"]
 "setup.py" = ["D"]
-
-# https://docs.pytest.org/en/6.2.x/customize.html
-[tool.pytest.ini_options]
-minversion = "6.0"
-testpaths = ["tests"]
-filterwarnings = ["error"]
+{%- endif -%}
+{%- if use_mypy %}
 
 # https://mypy.readthedocs.io/en/stable/config_file.html
 [tool.mypy]
@@ -125,7 +128,12 @@ pretty = true
 # [[tool.mypy.overrides]]
 # module = ["numpy.*",]
 # ignore_errors = true
-
+{%- endif %}
+# https://docs.pytest.org/en/6.2.x/customize.html
+[tool.pytest.ini_options]
+minversion = "6.0"
+testpaths = ["tests"]
+filterwarnings = ["error"]
 
 # https://coverage.readthedocs.io/en/6.4/config.html
 [tool.coverage.report]
@@ -141,6 +149,8 @@ exclude_lines = [
 source = ["src"]
 
 # https://github.com/mgedmin/check-manifest#configuration
+# add files that you want check-manifest to explicitly ignore here
+# (files that are in the repo but shouldn't go in the package)
 [tool.check-manifest]
 ignore = [
     ".github_changelog_generator",
@@ -149,23 +159,3 @@ ignore = [
     "setup.py",
     "tests/**/*",
 ]
-
-# https://python-semantic-release.readthedocs.io/en/latest/configuration.html
-[tool.semantic_release]
-version_source = "tag_only"
-branch = "main"
-changelog_sections = "feature,fix,breaking,documentation,performance,chore,:boom:,:sparkles:,:children_crossing:,:lipstick:,:iphone:,:egg:,:chart_with_upwards_trend:,:ambulance:,:lock:,:bug:,:zap:,:goal_net:,:alien:,:wheelchair:,:speech_balloon:,:mag:,:apple:,:penguin:,:checkered_flag:,:robot:,:green_apple:,Other"
-# commit_parser=semantic_release.history.angular_parser
-build_command = "pip install build && python -m build"
-
-# # for things that require compilation
-# # https://cibuildwheel.readthedocs.io/en/stable/options/
-# [tool.cibuildwheel]
-# # Skip 32-bit builds & PyPy wheels on all platforms
-# skip = ["*-manylinux_i686", "*-musllinux_i686", "*-win32", "pp*"]
-# test-extras = ["test"]
-# test-command = "pytest {project}/tests -v"
-# test-skip = "*-musllinux*"
-
-# [tool.cibuildwheel.environment]
-# HATCH_BUILD_HOOKS_ENABLE = "1"
