--- a/project/.github/workflows/ci.yml.jinja
+++ b/project/.github/workflows/ci.yml.jinja
@@ -8,12 +8,16 @@ on:
       - "v*"
   pull_request:
   workflow_dispatch:
+  {% if test_pre_release -%}
   schedule:
     # run every week (for --pre release tests)
     - cron: "0 0 * * 0"
+  {%- endif %}{% raw %}
 
 jobs:
   check-manifest:
+    # check-manifest is a tool that checks that all files in version control are
+    # included in the sdist (unless explicitly excluded)
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -29,31 +33,36 @@ jobs:
         platform: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
-      - name: Cancel Previous Runs
+      - name: 🛑 Cancel Previous Runs
         uses: styfle/cancel-workflow-action@0.11.0
         with:
           access_token: ${{ github.token }}
 
       - uses: actions/checkout@v3
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: 🐍 Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
           cache-dependency-path: "pyproject.toml"
           cache: "pip"
 
-      # if running a cron job, we add the --pre flag to test against pre-releases
-      - name: Install dependencies
+      - name: Install Dependencies
         run: |
           python -m pip install -U pip
-          python -m pip install .[test] ${{ github.event_name == 'schedule' && '--pre' || ''  }}
+          {% endraw %}{%- if test_pre_release -%}
+          # if running a cron job, we add the --pre flag to test against pre-releases
+          {% raw %}python -m pip install .[test] ${{ github.event_name == 'schedule' && '--pre' || ''  }}{% endraw %}
+          {%- else -%}
+          python -m pip install .[test]
+          {%- endif %}
 
-      - name: Test
+      - name: 🧪 Run Tests
         run: pytest --color=yes --cov --cov-report=xml --cov-report=term-missing
+      {%- if test_pre_release %}{% raw %}
 
       # If something goes wrong with --pre tests, we can open an issue in the repo
-      - name: Report --pre Failures
+      - name: 📝 Report --pre Failures
         if: failure() && github.event_name == 'schedule'
         uses: JasonEtco/create-an-issue@v2
         env:
@@ -64,7 +73,8 @@ jobs:
           TITLE: "[test-bot] pip install --pre is failing"
         with:
           filename: .github/TEST_FAIL_TEMPLATE.md
-          update_existing: true
+          update_existing: true{% endraw %}
+      {%- endif %}{% raw %}
 
       - name: Coverage
         uses: codecov/codecov-action@v3
@@ -72,24 +82,24 @@ jobs:
   deploy:
     name: Deploy
     needs: test
-    if: success() && startsWith(github.ref, 'refs/tags/') && github.event_name != 'schedule'
+    if: success() && startsWith(github.ref, 'refs/tags/'){% endraw %}{%- if test_pre_release %}{% raw %} && github.event_name != 'schedule'{% endraw %}{% endif %}{% raw %}
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Python
+      - name: 🐍 Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.x"
 
-      - name: Build
+      - name: 👷 Build
         run: |
           git tag
           python -m pip install build
           python -m build
 
-      - name: Publish distribution 📦 to PyPI
+      - name: 🚢 Publish distribution 📦 to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           password: ${{ secrets.TWINE_API_KEY }}
@@ -97,3 +107,4 @@ jobs:
       - uses: softprops/action-gh-release@v1
         with:
           generate_release_notes: true
+{% endraw %}
