--- a/project/.github/workflows/ci.yml.jinja
+++ b/project/.github/workflows/ci.yml.jinja
@@ -85,10 +85,14 @@ jobs:
     needs: test
     if: success() && startsWith(github.ref, 'refs/tags/'){% endraw %}{%- if test_pre_release %}{% raw %} && github.event_name != 'schedule'{% endraw %}{% endif %}{% raw %}
     runs-on: ubuntu-latest
+    environment: release # Needs to be created in the gh repository settings
     permissions:
       # IMPORTANT: this permission is mandatory for trusted publishing on PyPi
       # see https://docs.pypi.org/trusted-publishers/
       id-token: write
+
+      # This permission allows writing releases
+      contents: write
 
     steps:
       - uses: actions/checkout@v3
