--- a/project/.github/workflows/ci.yml.jinja
+++ b/project/.github/workflows/ci.yml.jinja
@@ -14,10 +14,12 @@ on:
     - cron: "0 0 * * 0"
   {%- endif %}
 
+{% raw -%}
 # cancel in-progress runs that use the same workflow and branch
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
+{%- endraw %}
 
 jobs:
 {%- if mode != 'simple' %}
@@ -90,7 +92,6 @@ jobs:
       # IMPORTANT: this permission is mandatory for trusted publishing on PyPi
       # see https://docs.pypi.org/trusted-publishers/
       id-token: write
-
       # This permission allows writing releases
       contents: write
 
@@ -115,4 +116,5 @@ jobs:
       - uses: softprops/action-gh-release@v1
         with:
           generate_release_notes: true
+          files: './dist/*'
 {% endraw %}
