--- a/project/{% if use_pre_commit %}.pre-commit-config.yaml{% endif %}.jinja
+++ b/project/{% if use_pre_commit %}.pre-commit-config.yaml{% endif %}.jinja
@@ -38,3 +38,10 @@ repos:
         # additional_dependencies:
         #   - numpy
 {% endif %}
+{%- if use_numpydoc %}
+
+    - repo: https://github.com/numpy/numpydoc
+      rev: v1.6.0
+      hooks:
+          - id: numpydoc-validation
+{% endif %}
