--- a/project/pyproject.toml.jinja
+++ b/project/pyproject.toml.jinja
@@ -85,11 +85,14 @@ line-length = 88
 target-version = "py38"
 src = ["src"]
 # https://beta.ruff.rs/docs/rules/
+
 select = [
     "E",    # style errors
     "W",    # style warnings
     "F",    # flakes
-    "D",    # pydocstyle
+    {% if use_pydocstyle -%} 
+    "D",    # pydocstyle 
+    {%- endif -%}
     "I",    # isort
     "UP",   # pyupgrade
     "C4",   # flake8-comprehensions
@@ -97,11 +100,8 @@ select = [
     "A001", # flake8-builtins
     "RUF",  # ruff-specific rules
 ]
-# I do this to get numpy-style docstrings AND retain
-# D417 (Missing argument descriptions in the docstring)
-# otherwise, see:
-# https://beta.ruff.rs/docs/faq/#does-ruff-support-numpy-or-google-style-docstrings
-# https://github.com/charliermarsh/ruff/issues/2606
+
+{% if use_pydocstyle -%} 
 ignore = [
     "D100", # Missing docstring in public module
     "D107", # Missing docstring in __init__
@@ -112,10 +112,15 @@ ignore = [
     "D413", # Missing blank line after last section
     "D416", # Section name should end with a colon
 ]
+{%- endif -%}
 
 [tool.ruff.per-file-ignores]
-"tests/*.py" = ["D", "S"]
-"setup.py" = ["D"]
+"tests/*.py" = [
+    {% if use_pydocstyle -%} 
+    "D", 
+    {%- endif -%}
+    "S"
+]
 {%- endif -%}
 
 {%- if use_mypy %}
