--- a/project/pyproject.toml.jinja
+++ b/project/pyproject.toml.jinja
@@ -108,7 +108,7 @@ select = [
     "A001", # flake8-builtins
     "RUF",  # ruff-specific rules
     "TCH",  # flake8-type-checking
-    # "TID",  # https://docs.astral.sh/ruff/rules/#flake8-tidy-imports-tid
+    "TID",  # flake8-tidy-imports
 ]
 # This is to get numpy-style docstrings AND retain D417
 # (Missing argument descriptions in the docstring)
