--- a/project/pyproject.toml.jinja
+++ b/project/pyproject.toml.jinja
@@ -89,10 +89,8 @@ select = [
     "E",    # style errors
     "W",    # style warnings
     "F",    # flakes
-    {% if use_pydocstyle -%} 
-    "D",    # pydocstyle 
-    {%- endif -%}
-
+    {%- if use_pydocstyle %} 
+    "D",    # pydocstyle {%- endif %}
     "I",    # isort
     "UP",   # pyupgrade
     "C4",   # flake8-comprehensions
@@ -100,8 +98,7 @@ select = [
     "A001", # flake8-builtins
     "RUF",  # ruff-specific rules
 ]
-
-{% if use_pydocstyle -%} 
+{%- if use_pydocstyle %} 
 ignore = [
     "D100", # Missing docstring in public module
     "D107", # Missing docstring in __init__
@@ -112,18 +109,15 @@ ignore = [
     "D413", # Missing blank line after last section
     "D416", # Section name should end with a colon
 ]
-{%- endif -%}
+{%- endif %}
 
 [tool.ruff.per-file-ignores]
 "tests/*.py" = [
-    
-    {% if use_pydocstyle -%} 
-    "D", 
-    {%- endif -%}
-
+    {%- if use_pydocstyle %} 
+    "D", {%- endif %}
     "S"
 ]
-{%- endif -%}
+{%- endif %}
 
 {%- if use_mypy %}
 # https://mypy.readthedocs.io/en/stable/config_file.html
