--- a/project/pyproject.toml.jinja
+++ b/project/pyproject.toml.jinja
@@ -139,7 +139,7 @@ pretty = true
 # https://numpydoc.readthedocs.io/en/latest/format.html
 [tool.numpydoc_validation]
 checks = [
-    "all",  # report on all checks, except the ones below
+    "all",  # Report on all checks, except the ones below
     "EX01", # No examples section found
     "SA01", # See Also section not found
     "ES01", # No extended summary found
