--- a/project/pyproject.toml.jinja
+++ b/project/pyproject.toml.jinja
@@ -64,7 +64,7 @@ dev = [
     {%- if use_mypy %}
     "mypy",{%- endif %}
     "pdbpp",  # https://github.com/pdbpp/pdbpp
-    {%- if use_precommit %}
+    {%- if use_pre_commit %}
     "pre-commit",{%- endif %}
     "rich",  # https://github.com/Textualize/rich
     {%- if use_ruff %}
