--- a/project/{% if use_pre_commit %}.pre-commit-config.yaml{% endif %}.jinja
+++ b/project/{% if use_pre_commit %}.pre-commit-config.yaml{% endif %}.jinja
@@ -9,28 +9,27 @@ ci:
 
 repos:
   - repo: https://github.com/abravalheri/validate-pyproject
-    rev: v0.15
+    rev: v0.16
     hooks:
       - id: validate-pyproject
 {%- if use_ruff %}
 
+  - repo: https://github.com/crate-ci/typos
+    rev: v1.19.0
+    hooks:
+      - id: typos
+
   - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.1.3
+    rev: v0.3.0
     hooks:
       - id: ruff
-        args: [--fix]
-{%- endif %}
-{%- if use_black %}
-
-  - repo: https://github.com/psf/black
-    rev: 23.10.1
-    hooks:
-      - id: black
+        args: [--fix]  # may also add '--unsafe-fixes'
+      - id: ruff-format
 {%- endif %}
 {%- if use_mypy %}
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.6.1
+    rev: v1.8.0
     hooks:
       - id: mypy
         files: "^src/"
