--- a/project/{% if use_pre_commit %}.pre-commit-config.yaml{% endif %}.jinja
+++ b/project/{% if use_pre_commit %}.pre-commit-config.yaml{% endif %}.jinja
@@ -15,12 +15,13 @@ repos:
 {%- if use_ruff %}
 
   - repo: https://github.com/crate-ci/typos
-    rev: v1.19.0
+    rev: v1.20.9
     hooks:
       - id: typos
+        args: [--force-exclude]  # omiting --write-changes
 
   - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.3.0
+    rev: v0.4.1
     hooks:
       - id: ruff
         args: [--fix]  # may also add '--unsafe-fixes'
@@ -29,7 +30,7 @@ repos:
 {%- if use_mypy %}
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.8.0
+    rev: v1.9.0
     hooks:
       - id: mypy
         files: "^src/"
