--- a/project/{% if use_pre_commit %}.pre-commit-config.yaml{% endif %}.jinja
+++ b/project/{% if use_pre_commit %}.pre-commit-config.yaml{% endif %}.jinja
@@ -18,7 +18,7 @@ repos:
     rev: v1.20.9
     hooks:
       - id: typos
-        args: [--force-exclude]  # omiting --write-changes
+        args: [--force-exclude]  # omitting --write-changes
 
   - repo: https://github.com/charliermarsh/ruff-pre-commit
     rev: v0.4.1
