--- a/project/{% if use_pre_commit %}.pre-commit-config.yaml{% endif %}.jinja
+++ b/project/{% if use_pre_commit %}.pre-commit-config.yaml{% endif %}.jinja
@@ -9,19 +9,19 @@ ci:
 
 repos:
   - repo: https://github.com/abravalheri/validate-pyproject
-    rev: v0.16
+    rev: v0.18
     hooks:
       - id: validate-pyproject
 {%- if use_ruff %}
 
   - repo: https://github.com/crate-ci/typos
-    rev: v1.20.9
+    rev: typos-dict-v0.11.20
     hooks:
       - id: typos
         args: [--force-exclude]  # omitting --write-changes
 
   - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.4.1
+    rev: v0.4.8
     hooks:
       - id: ruff
         args: [--fix]  # may also add '--unsafe-fixes'
@@ -30,7 +30,7 @@ repos:
 {%- if use_mypy %}
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.9.0
+    rev: v1.10.0
     hooks:
       - id: mypy
         files: "^src/"
