--- a/project/{% if use_pre_commit %}.pre-commit-config.yaml{% endif %}.jinja
+++ b/project/{% if use_pre_commit %}.pre-commit-config.yaml{% endif %}.jinja
@@ -9,7 +9,7 @@ ci:
 
 repos:
   - repo: https://github.com/abravalheri/validate-pyproject
-    rev: v0.16
+    rev: v0.22
     hooks:
       - id: validate-pyproject
 {%- if use_ruff %}
@@ -18,10 +18,10 @@ repos:
     rev: v1.20.9
     hooks:
       - id: typos
-        args: [--force-exclude]  # omiting --write-changes
+        args: [--force-exclude]  # omitting --write-changes
 
-  - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.4.1
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.7.2
     hooks:
       - id: ruff
         args: [--fix]  # may also add '--unsafe-fixes'
@@ -30,7 +30,7 @@ repos:
 {%- if use_mypy %}
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.9.0
+    rev: v1.13.0
     hooks:
       - id: mypy
         files: "^src/"
