--- a/project/.github/workflows/ci.yml.jinja
+++ b/project/.github/workflows/ci.yml.jinja
@@ -58,23 +58,44 @@ jobs:
 
       - name: 🧪 Run Tests
         run: uv run pytest --cov --cov-report=xml --cov-report=term-missing
-      {%- if test_pre_release %}{% raw %}
+      {% raw %}
 
-      # If something goes wrong with --pre tests, we can open an issue in the repo
-      - name: 📝 Report --pre Failures
-        if: failure() && github.event_name == 'schedule'
-        uses: JasonEtco/create-an-issue@v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PLATFORM: ${{ matrix.platform }}
-          PYTHON: ${{ matrix.python-version }}
-          RUN_ID: ${{ github.run_id }}
-          TITLE: "[test-bot] pip install --pre is failing"
+      - name: Coverage
+        uses: codecov/codecov-action@v5
+
+  build-and-inspect-package:
+    name: Build & inspect package.
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
         with:
-          filename: .github/TEST_FAIL_TEMPLATE.md
-          update_existing: true{% endraw %}
-      {%- endif %}{% raw %}
+          fetch-depth: 0
+      - uses: hynek/build-and-inspect-python-package@v2
 
+  upload-to-pypi:
+    name: Upload package to PyPI
+    needs: build-and-inspect-package
+    runs-on: ubuntu-latest
+    permissions:
+      # IMPORTANT: this permission is mandatory for trusted publishing on PyPi
+      # see https://docs.pypi.org/trusted-publishers/
+      id-token: write
+      # This permission allows writing releases
+      contents: write
+
+    steps:
+      - name: Download built artifact to dist/
+        uses: actions/download-artifact@v4
+        with:
+          name: Packages
+          path: dist
+      - name: 🚢 Publish to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+      - uses: softprops/action-gh-release@v1
+        with:
+          generate_release_notes: true
+          files: './dist/*'
 {% endraw %}
 
   
