--- a/project/tests/test_{{module_name}}.py.jinja
+++ b/project/tests/test_{{module_name}}.py.jinja
@@ -1,2 +1,5 @@
-def test_something():
-    pass
+import {{module_name}}
+
+
+def test_imports_with_version():
+    assert isinstance({{module_name}}.__version__, str)
