--- a/project/pyproject.toml.jinja
+++ b/project/pyproject.toml.jinja
@@ -95,7 +95,7 @@ dev = [
     "mypy",{%- endif %}
     "pdbpp",  # https://github.com/pdbpp/pdbpp
     {%- if use_pre_commit %}
-    "pre-commit",{%- endif %}
+    "pre-commit-uv",{%- endif %}
     "rich",  # https://github.com/Textualize/rich
     {%- if use_ruff %}
     "ruff",{%- endif %}
