--- a/project/pyproject.toml.jinja
+++ b/project/pyproject.toml.jinja
@@ -193,6 +193,7 @@ ignore = [
     ".pre-commit-config.yaml",
     ".ruff_cache/**/*",
     "tests/**/*",
+    "uv.lock",
 ]
 
 # https://github.com/crate-ci/typos/blob/master/docs/reference.md
