use pep 735 dependency groups instead of dev/test extras, use setup-uv  (#32)

--- a/project/README.md.jinja
+++ b/project/README.md.jinja
@@ -7,3 +7,32 @@
 [![codecov](https://codecov.io/gh/{{github_username}}/{{project_name}}/branch/main/graph/badge.svg)](https://codecov.io/gh/{{github_username}}/{{project_name}})
 
 {{project_short_description}}
+
+## Development
+
+The easiest way to get started is to use the [github cli](https://cli.github.com)
+and [uv](https://docs.astral.sh/uv/getting-started/installation/):
+
+```sh
+{% if github_username -%}
+gh repo fork {{github_username}}/{{project_name}} --clone
+# or just
+# gh repo clone {{github_username}}/{{project_name}}
+{%- else -%}
+# clone the repo or your fork locally
+{%- endif %}
+cd {{project_name}}
+uv sync
+```
+
+Run tests:
+
+```sh
+uv run pytest
+```
+
+Lint files:
+
+```sh
+uv run pre-commit run --all-files
+```
