--- a/project/.github/workflows/ci.yml.jinja
+++ b/project/.github/workflows/ci.yml.jinja
@@ -2,10 +2,8 @@ name: CI
 
 on:
   push:
-    branches:
-      - main
-    tags:
-      - "v*"
+    branches: [main]
+    tags: [v*]
   pull_request:
   workflow_dispatch:
   {% if test_pre_release -%}
@@ -24,8 +22,6 @@ concurrency:
 jobs:
 {%- if mode != 'simple' %}
   check-manifest:
-    # check-manifest is a tool that checks that all files in version control are
-    # included in the sdist (unless explicitly excluded)
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -34,6 +30,10 @@ jobs:
   test:
     name: ${{ matrix.platform }} (${{ matrix.python-version }})
     runs-on: ${{ matrix.platform }}{% endraw %}
+    {%- if test_pre_release %}
+    env:
+      UV_PRERELEASE: {% raw %}${{ github.event_name == 'schedule' && 'allow' || 'if-necessary-or-explicit' }}{% endraw %}
+    {%- endif %}
     strategy:
       fail-fast: false
       matrix:
@@ -48,24 +48,16 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: 🐍 Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+        uses: astral-sh/setup-uv@v6
         with:
           python-version: ${{ matrix.python-version }}
-          cache-dependency-path: "pyproject.toml"
-          cache: "pip"
+          enable-cache: true
 
       - name: Install Dependencies
-        run: |
-          python -m pip install -U pip
-          {% endraw %}{%- if test_pre_release -%}
-          # if running a cron job, we add the --pre flag to test against pre-releases
-          {% raw %}python -m pip install .[test] ${{ github.event_name == 'schedule' && '--pre' || ''  }}{% endraw %}
-          {%- else -%}
-          python -m pip install .[test]
-          {%- endif %}
+        run: uv sync --no-dev --group test
 
       - name: 🧪 Run Tests
-        run: pytest --color=yes --cov --cov-report=xml --cov-report=term-missing
+        run: uv run pytest --cov --cov-report=xml --cov-report=term-missing{% endraw %}
       {%- if test_pre_release %}{% raw %}
 
       # If something goes wrong with --pre tests, we can open an issue in the repo
@@ -84,14 +76,25 @@ jobs:
       {%- endif %}{% raw %}
 
       - name: Coverage
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v5
+        # with:
+        #   token: ${{ secrets.CODECOV_TOKEN }}
 
-  deploy:
-    name: Deploy
+  build-and-inspect-package:
+    name: Build & inspect package.
     needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: hynek/build-and-inspect-python-package@v2
+
+  upload-to-pypi:
+    name: Upload package to PyPI
+    needs: build-and-inspect-package
     if: success() && startsWith(github.ref, 'refs/tags/'){% endraw %}{%- if test_pre_release %}{% raw %} && github.event_name != 'schedule'{% endraw %}{% endif %}{% raw %}
     runs-on: ubuntu-latest
-
     permissions:
       # IMPORTANT: this permission is mandatory for trusted publishing on PyPi
       # see https://docs.pypi.org/trusted-publishers/
@@ -100,24 +103,14 @@ jobs:
       contents: write
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Download built artifact to dist/
+        uses: actions/download-artifact@v4
         with:
-          fetch-depth: 0
-
-      - name: 🐍 Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.x"
-
-      - name: 👷 Build
-        run: |
-          python -m pip install build
-          python -m build
-
+          name: Packages
+          path: dist
       - name: 🚢 Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
-
-      - uses: softprops/action-gh-release@v1
+      - uses: softprops/action-gh-release@v2
         with:
           generate_release_notes: true
           files: './dist/*'
