add actionlint, support 3.14

--- a/project/pyproject.toml.jinja
+++ b/project/pyproject.toml.jinja
@@ -56,6 +56,9 @@ classifiers = [
     {%- if minimum_python <= 13 %}
     "Programming Language :: Python :: 3.13",
     {%- endif %}
+    {%- if minimum_python <= 14 %}
+    "Programming Language :: Python :: 3.14",
+    {%- endif %}
     "Typing :: Typed",
 ]
 # add your package dependencies here
