--- a/project/{% if use_pre_commit %}.pre-commit-config.yaml{% endif %}.jinja
+++ b/project/{% if use_pre_commit %}.pre-commit-config.yaml{% endif %}.jinja
@@ -12,25 +12,30 @@ repos:
     rev: v0.24.1
     hooks:
       - id: validate-pyproject
+
+  - repo: https://github.com/rhysd/actionlint
+    rev: v1.7.7
+    hooks:
+      - id: actionlint
 {%- if use_ruff %}
 
-  - repo: https://github.com/crate-ci/typos
-    rev: v1.32.0
+  - repo: https://github.com/adhtruong/mirrors-typos
+    rev: v1.36.2
     hooks:
       - id: typos
         args: [--force-exclude]  # omitting --write-changes
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.11.10
+    rev: v0.13.0
     hooks:
-      - id: ruff
+      - id: ruff-check
         args: [--fix]  # may also add '--unsafe-fixes'
       - id: ruff-format
 {%- endif %}
 {%- if use_mypy %}
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.15.0
+    rev: v1.18.1
     hooks:
       - id: mypy
         files: "^src/"
